--- a/trunk/CVector/Makefile
+++ b/trunk/CVector/Makefile
@@ -4,6 +4,7 @@
 #
 #  Created by Herbert J. Bernstein on 12/03/08.
 #  Copyright 2008 Herbert J. Bernstein. All rights reserved.
+#  rev 13 Jan 09 -- HJB
 #
 #
 
@@ -35,14 +36,19 @@
 
 # Version string
 VERSION = 1:0:1
-RELEASE = 1.0
+RELEASE = 1.0.1
 
 
 #
 # Compiler and compilation flags
 #
 CC	= gcc
+ifneq ($(MSYSTEM),MINGW32)
 CFLAGS  = -g -O2  -Wall -ansi -pedantic
+else
+CFLAGS  = -g -O2 -Wall
+endif
+
 
 #
 # libtool path if system default is not suitable
@@ -68,8 +74,10 @@ SRC      = $(ROOT)
 INC      = $(ROOT)
 EXAMPLES = $(ROOT)
 TESTDATA = $(ROOT)
-#INSTALLDIR = /usr/local
-INSTALLDIR  = $(HOME)
+ifndef INSTALL_PREFIX
+INSTALL_PREFIX = /usr/local
+#INSTALL_PREFIX  = $(HOME)
+endif
 
 #
 # Include directories
@@ -81,10 +89,10 @@ INCLUDES = -I$(INC)
 endif
 
 COMPILE_COMMAND        =  $(LIBTOOL) --mode=compile $(CC) $(CFLAGS) $(INCLUDES) $(WARNINGS) -c
-LIBRARY_LINK_COMMAND   =  $(LIBTOOL) --mode=link  $(CC) -version-info $(VERSION) -release $(RELEASE) -rpath $(INSTALLDIR)/lib
+LIBRARY_LINK_COMMAND   =  $(LIBTOOL) --mode=link  $(CC) -version-info $(VERSION) -release $(RELEASE) -no-undefined -rpath $(INSTALL_PREFIX)/lib
 BUILD_COMMAND_LOCAL    =  $(LIBTOOL) --mode=link $(CC) $(CFLAGS) $(INCLUDES)
-BUILD_COMMAND_DYNAMIC  =  $(LIBTOOL) --mode=link $(CC) $(CFLAGS) -dynamic -I $(INSTALLDIR)/include -L$(INSTALLDIR)/lib
-BUILD_COMMAND_STATIC   =  $(LIBTOOL) --mode=link $(CC) $(CFLAGS) -static -I $(INSTALLDIR)/include -L$(INSTALLDIR)/lib
+BUILD_COMMAND_DYNAMIC  =  $(LIBTOOL) --mode=link $(CC) $(CFLAGS) -shared -I $(INSTALL_PREFIX)/include
+BUILD_COMMAND_STATIC   =  $(LIBTOOL) --mode=link $(CC) $(CFLAGS) -static -I $(INSTALL_PREFIX)/include
 INSTALL_COMMAND        =  $(LIBTOOL) --mode=install cp
 INSTALL_FINISH_COMMAND =  $(LIBTOOL) --mode=finish
 
@@ -145,7 +153,7 @@ default:
 	@echo ' '
 	@echo ' The current values are :'
 	@echo ' '
-	@echo '   $(INSTALLDIR) '	
+	@echo '   $(INSTALL_PREFIX) '	
 	@echo '   $(INSTALL_COMMAND) '	
 	@echo '   $(INSTALL_FINISH) '	
 	@echo ' '
@@ -176,22 +184,22 @@ all:	$(LIB) $(BIN) $(SOURCE) $(HEADERS) \
 		$(LIB)/libCVector.$(LIB_EXT) \
 		$(BIN)/CVectorBasicTest
 		
-install:  all $(INSTALLDIR) $(INSTALLDIR)/lib $(INSTALLDIR)/include \
+install:  all $(INSTALL_PREFIX) $(INSTALL_PREFIX)/lib $(INSTALL_PREFIX)/include \
           $(INC) $(LIB)/libCVector.$(LIB_EXT)  $(INC)/CVector.h
-		  $(INSTALL_COMMAND) $(LIB)/libCVector.$(LIB_EXT) $(INSTALLDIR)/lib/libCVector.$(LIB_EXT)
-		  $(INSTALL_FINISH_COMMAND) $(INSTALLDIR)/lib/libCVector.$(LIB_EXT)
-		  -cp $(INSTALLDIR)/include/CVector.h $(INSTALLDIR)/include/CVector_old.h
-		  cp $(INC)/CVector.h $(INSTALLDIR)/include/CVector.h
-		  chmod 644 $(INSTALLDIR)/include/CVector.h
+		  $(INSTALL_COMMAND) $(LIB)/libCVector.$(LIB_EXT) $(INSTALL_PREFIX)/lib/libCVector.$(LIB_EXT)
+		  $(INSTALL_FINISH_COMMAND) $(INSTALL_PREFIX)/lib/libCVector.$(LIB_EXT)
+		  -cp $(INSTALL_PREFIX)/include/CVector.h $(INSTALL_PREFIX)/include/CVector_old.h
+		  cp $(INC)/CVector.h $(INSTALL_PREFIX)/include/CVector.h
+		  chmod 644 $(INSTALL_PREFIX)/include/CVector.h
 		  echo "Testing final install dynamic"
 		  $(BUILD_COMMAND_DYNAMIC)  $(EXAMPLES)/CVectorBasicTest.c \
-		  -lCVector -o $(BIN)/CVectorBasicTest_dynamic
+		  -L$INSTALLPREFIX)/lib -lCVector -o $(BIN)/CVectorBasicTest_dynamic
 		  $(BIN)/CVectorBasicTest_dynamic > $(TESTDATA)/CVectorBasicTest_dynamic.lst
 		  diff -b -c $(TESTDATA)/CVectorBasicTest_orig.lst \
 		    $(TESTDATA)/CVectorBasicTest_dynamic.lst
 		  echo "Testing final install static"
 		  $(BUILD_COMMAND_STATIC) $(EXAMPLES)/CVectorBasicTest.c \
-		   -lCVector -o $(BIN)/CVectorBasicTest_static
+		  -L$INSTALLPREFIX)/lib -lCVector -o $(BIN)/CVectorBasicTest_static
 		  $(BIN)/CVectorBasicTest_static > $(TESTDATA)/CVectorBasicTest_static.lst
 		  diff -b -c $(TESTDATA)/CVectorBasicTest_orig.lst \
 		    $(TESTDATA)/CVectorBasicTest_static.lst
@@ -201,17 +209,17 @@ install:  all $(INSTALLDIR) $(INSTALLDIR)/lib $(INSTALLDIR)/include \
 #
 # Directories
 #
-$(INSTALLDIR):
-	mkdir -p $(INSTALLDIR)
+$(INSTALL_PREFIX):
+	mkdir -p $(INSTALL_PREFIX)
 
-$(INSTALLDIR)/lib:  $(INSTALLDIR)
-	mkdir -p $(INSTALLDIR)/lib
+$(INSTALL_PREFIX)/lib:  $(INSTALL_PREFIX)
+	mkdir -p $(INSTALL_PREFIX)/lib
 
-$(INSTALLDIR)/bin:  $(INSTALLDIR)
-	mkdir -p $(INSTALLDIR)/bin
+$(INSTALL_PREFIX)/bin:  $(INSTALL_PREFIX)
+	mkdir -p $(INSTALL_PREFIX)/bin
 
-$(INSTALLDIR)/include:  $(INSTALLDIR)
-	mkdir -p $(INSTALLDIR)/include
+$(INSTALL_PREFIX)/include:  $(INSTALL_PREFIX)
+	mkdir -p $(INSTALL_PREFIX)/include
 	
 
 $(LIB):
@@ -258,6 +266,9 @@ clean:
 	@-rm -f core 
 	@-rm -f *.o
 	@-rm -f *.$(OBJ_EXT)
+	@-rm -f *.c.*
+	@-rm -rf .libs
+
 
 #
 # Restore to distribution state
